[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GSV_pole_pipeline"
version = "0.0.2"
authors = [
  { name="Jonathan Dupui", email="jon.c.dupuis@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/JDups/GSV_pole_pipeline"
"Bug Tracker" = "https://github.com/JDups/GSV_pole_pipeline/issues"